# web_serv

./: pyproject.toml
html/: catalog_page.html  category_page.html  contacts_page.html  main_page.html
src/: main.py
